# ChartBeacon

./: .dockerignore  .gitignore  Dockerfile.airflow  Dockerfile.api  Dockerfile.dashboard  README.md  TIMEZONE_IMPROVEMENTS.md  docker-compose.yml  env.example  fill_request.json  init-db.sql  pyproject.toml  test_api_fill_all.py  test_backtest.py  test_fill_data.py
.cursor/: mcp.json
.cursor/rules/: erd.mdc  indicators-rule.mdc  prd.mdc
airflow/dags/: indicators_1d.py  indicators_1h.py  indicators_1mo.py  indicators_3mo.py  indicators_5d.py  indicators_5m.py  smart_alerts_dag.py
airflow/plugins/: __init__.py  calculator.py  fetcher.py  notifier.py  scorer.py  utils.py
api/: __init__.py  backtest.py  crud.py  data_filler.py  database.py  main.py  models.py  schemas.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: add-symbol-dialog.tsx  backtest-panel.tsx  chart-container.tsx  indicator-panel.tsx  prompt-copy-button.tsx  summary-card.tsx
dashboard_git_backup/: COMMIT_EDITMSG  index
dashboard_git_backup/refs/heads/: master
db/: init.sql
